<resources>
    <string name="app_name">Note Everything</string>

    <!-- Navigation drawer-->
    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>
    <string name="nav_btn_add_text">Добавить список</string>

    <!-- Note list detail fragment -->
    <string name="list_title_hint">Наименование</string>
    <string name="save_btn_text">Сохранить</string>
    <string name="color_text">Цвет</string>
    <string name="completed_text">Выполнено</string>

    <!-- Note detail fragment -->
    <string name="note_title_hint">Наименование</string>

    <!-- Menu detail -->
    <string name="menu_delete">Удалить</string>
    <string name="menu_logout">Сменить пользователя</string>

    <!-- Dialogs -->
    <string name="dialog_done">Готово</string>
    <string name="dialog_close">Закрыть</string>
    <string name="color_chooser_title">Выбор цвета</string>

    <!-- Splash fragment -->
    <string name="sync">Синхронизация…</string>

    <!-- Login fragment -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="enter_button">Войти</string>
    <string name="registration_button">Регистрация</string>

    <string name="empty_email_error">Введите адрес эл.почты</string>
    <string name="empty_password_error">Введите пароль</string>
    <string name="empty_confirm_password_error">Повторите пароль</string>
    <string name="password_match_error">Пароли должны совпадать</string>

    <!-- Registration fragment -->
    <string name="register_title">Создание пользователя</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Пароль</string>
    <string name="register_confirm_password_hint">Подверждение пароля</string>
    <string name="register_create_user_btn">Создать пользователя</string>

    <!-- Filter menu -->
    <string name="filter_title">Фильтр списка</string>
    <string name="filter_type_title">Тип фильтра:</string>
    <string name="filter_by_created_date">По дате создания</string>
    <string name="filter_by_title">По наименованию</string>
    <string name="filter_order_title">Порядок:</string>
    <string name="filter_desc">По убыванию</string>
    <string name="filter_asc">По возрастанию</string>
    <string name="filter_cancel_btn">Отменить</string>
    <string name="filter_apply_btn">Применить</string>

    <!-- Toast messages -->
    <string name="delete_note_list_success">Список удалён</string>
    <string name="delete_note_success">Запись удалена</string>



</resources>