<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="0dp"
    android:padding="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_title"

        android:textColor="@color/menu_item_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/filterTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/filter_type_title"
            android:textColor="@color/menu_item_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_by_created_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_by_created_date"
            android:textColor="@color/menu_item_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_by_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_title"
            android:textColor="@color/menu_item_color"
            android:textSize="16sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/filterOrderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/filterTypeGroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/filter_order_title"
            android:textColor="@color/menu_item_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/filter_desc"
            android:textColor="@color/menu_item_color"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/filter_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_asc"
            android:textColor="@color/menu_item_color"
            android:textSize="16sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_cancel_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/filter_cancel_btn"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toStartOf="@+id/filter_apply_btn"
        app:layout_constraintTop_toBottomOf="@+id/filterOrderGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_apply_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/filter_apply_btn"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_cancel_btn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>